tests/fixtures/valid/identifiers-full.omts
{
  "omts_version": "0.1.0",
  "snapshot_date": "2026-02-22",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "nodes": [
    {
      "id": "org-full-ids",
      "type": "organization",
      "name": "Fully Identified Corp",
      "identifiers": [
        {
          "scheme": "lei",
          "value": "5493006MHB84DD0ZWV18",
          "valid_from": "2020-01-01",
          "valid_to": "2027-12-31",
          "verification_status": "verified",
          "verification_date": "2026-01-15"
        },
        {
          "scheme": "duns",
          "value": "081466849",
          "valid_from": "2015-06-01",
          "verification_status": "reported"
        },
        {
          "scheme": "gln",
          "value": "5060012340001",
          "sensitivity": "public"
        },
        {
          "scheme": "nat-reg",
          "value": "HRB86891",
          "authority": "RA000548",
          "valid_from": "2010-01-01",
          "valid_to": null,
          "sensitivity": "restricted"
        },
        {
          "scheme": "vat",
          "value": "DE123456789",
          "authority": "DE",
          "sensitivity": "restricted",
          "verification_status": "inferred"
        },
        {
          "scheme": "internal",
          "value": "V-100234",
          "authority": "sap-mm-prod",
          "sensitivity": "confidential"
        },
        {
          "scheme": "opaque",
          "value": "e8798687b081da98b7cd1c4e5e2423bd3214fbab0f1f476a2dcdbf67c2e21141"
        },
        {
          "scheme": "org.gs1.gtin",
          "value": "05060012340018",
          "valid_from": "2022-03-01",
          "verification_status": "unverified"
        }
      ]
    }
  ],
  "edges": []
}
