tests/fixtures/invalid/disclosure-violation.omts
{
  "omtsf_version": "0.1.0",
  "snapshot_date": "2026-02-18",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "disclosure_scope": "public",
  "nodes": [
    {
      "id": "org-acme",
      "type": "organization",
      "name": "Acme Corp",
      "identifiers": [
        { "scheme": "vat", "value": "DE123456789", "authority": "DE", "sensitivity": "restricted" }
      ]
    }
  ],
  "edges": []
}
